--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,12 @@
 @import 'tailwindcss';
 
 @theme {
+  --font-aeonik: 'GtEestiProDisplay';
+
   --color-inferno: #ff5533;
   --color-outrageous-orange: #ff6a4c;
   --color-cinnabar: #df4a2c;
+  --color-yellow-sea: #ffaa00;
   --color-white: #ffffff;
   --color-black: #000000;
   --color-dark-charcoal: #333333;
@@ -12,10 +15,14 @@
   --color-gray-x11: #bababa;
   --color-dav-ys-grey: #545454;
   --color-ue-red: #c00000;
+  --color-sonic-silver: #757575;
 
   --breakpoint-xlg: 1184px;
 
   --spacing-section: calc(1136px + 24px * 2);
+
+  --shadow-soft-drop: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
+  --shadow-deep: 0 2px 54px rgba(0, 0, 0, 0.1);
 }
 
 @utility z-overlay {
