--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,24 @@
 
   --spacing-section: calc(1136px + 24px * 2);
 
+  --grid-cols-photos: repeat(
+    auto-fill,
+    minmax(max(134px, (100% - (4 - 1) * 8px)/4), 1fr)
+  );
+
   --shadow-soft-drop: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
   --shadow-deep: 0 2px 54px rgba(0, 0, 0, 0.1);
+
+  --animate-fade-in: fade-in 0.3s;
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
 @utility z-overlay {
@@ -32,4 +48,16 @@
 
 @utility scrollbar-hidden {
   scrollbar-width: none;
+}
+
+@utility arrow-hidden {
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+@utility grid-cols-* {
+  grid-template-columns: --value(--grid-cols-*);
 }
