--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,8 @@
 
   --spacing-section: calc(1136px + 24px * 2);
 
+  --bg-gradient-shadow: linear-gradient(180deg, #0000 0, #0009 80%, #0009 100%);
+
   --grid-cols-photos: repeat(
     auto-fill,
     minmax(max(134px, (100% - (4 - 1) * 8px)/4), 1fr)
