--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import 'tailwindcss';
 @plugin '@tailwindcss/typography';
 
 @theme {
@@ -20,8 +21,10 @@
   --breakpoint-xlg: 1184px;
 
   --spacing-section: calc(1136px + 24px * 2);
+  --spacing-sidebar: calc(100vw - 64px);
 
   --bg-gradient-shadow: linear-gradient(180deg, #0000 0, #0009 80%, #0009 100%);
+  --shadow-sidebar: 0 2px 4px rgba(0, 0, 0, 0.25);
 
   --grid-cols-auto-fill: repeat(
     auto-fill,
